--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@fontsource/inter": "^5.2.6",
     "@react-pdf/renderer": "^4.3.0",
+    "@studio-freight/lenis": "^1.0.42",
     "framer-motion": "^12.23.6",
     "jspdf": "^3.0.1",
     "lucide-react": "^0.525.0",
@@ -18,7 +19,10 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
-    "swiper": "^11.2.10"
+    "react-intersection-observer": "^9.16.0",
+    "react-simple-typewriter": "^5.0.1",
+    "swiper": "^11.2.10",
+    "typewriter-effect": "^2.22.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
